# LeverageScoreExperiments

./: .gitignore  First Steps with Manim.ipynb  README.md  animations.ipynb  cnn-embeddings.ipynb  example.py  index.html  leverage-score-utility.ipynb  main.py  mnist-cnn-A1-93d77c3a55680289cf891cc6aa9c777a4068913c3d94f6a12ca8e800343c4ed2.pth  mnist-cnn-A2-84ffa0eefcbeeb657268917dd8bee109056e2999075e32338726351bb75c7b0b.pth  mnist-cnn-A3-380064bbb68441c4a2d1846554f2eeef13008958975970e7128c168f9ecf3afe.pth  mnist-cnn-A4-b5afb85682d831c18f3cbb7fe5248165c77495ef8b708cb5c60e640db5cf706f.pth  mnist-cnn-A5-281c64ae0e093b5f25c74f563ab8df4816f691dac7192a6080025a1a5c5a5ea6.pth  mnist-cnn-B1-3dfbc9921cd728dc8518b56f50277e7b06c5b1274287f0c423fb6d285234c61e.pth  mnist-cnn-B1-84b328155fa96389e73cce5eed35404f17fa625a35db8b0beb7da142a279277f.pth  mnist-cnn-B2-c793eae23be79a52e667980dabb2d8d3fbbbf37f6264c600f116f3d6600e03a0.pth  mnist-cnn-B2-d33ec18ec317ceb834e70900948cebf5349cd694b8e60c2fa01df671d884c6e9.pth  mnist-cnn-B3-0a6871e7460a812e7ac48d7db52e642a0bf82cb6848e9c8b20f69cc4590697b8.pth  mnist-cnn-B4-fcfe370d0ff6a966c608170f43accb09c409c3f74c0bdf53a45c9885189810a8.pth  mnist-cnn-B5-0d6d003d770bfedad50d46081144dd3daa8349b487b0a5a33780ca5ab88d1ab2.pth  mnist-cnn-B5-279b4287f2a445aaaf5e5675d71f7598494df55d3e566aa6c7527516f14788e8.pth  mnist-cnn-C1-4b8f6cc4d9eb7a1c86025ba9042dd4a38ee373c03b9c4a9dc6d70d9a1f3f1422.pth  mnist-cnn-C1-c837d179d75114e9d075463863a69b3c29d89a6a5b58caf55ff0ca10db357247.pth  mnist-cnn-C2-5f0b018253844c6bc343087e0574368a8b3ba29212822abb485bca5491bc7305.pth  render.sh  (+8 more)
(+11 files in other folders)
