[project]
name = "leveragescoreexperiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "manim>=0.19.2",
    "manim-slides>=5.1.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
