[project]
name = "leveragescoreexperiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "manim>=0.19.1",
    "manim-ml>=0.0.24",
    "manim-slides[magic]>=5.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
